--- a/swama/.swiftpm/xcode/xcshareddata/xcschemes/swama run.xcscheme
+++ b/swama/.swiftpm/xcode/xcshareddata/xcschemes/swama run.xcscheme
@@ -52,20 +52,12 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "run mlx-community/Qwen3-1.7B-4bit &quot;&#x4f60;&#x597d;&quot;"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "pull mlx-community/Qwen3-1.7B-4bit "
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "list"
+            argument = "run"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "serve"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "menubar"
