--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     
     - uses: swift-actions/setup-swift@v2
       with:
-        swift-version: "6.2.3"
+        swift-version: "6.2"
     
     - name: Cache Swift Package Manager
       uses: actions/cache@v4
@@ -28,7 +28,7 @@ jobs:
     - name: Build CLI
       run: |
         cd swama
-        swift build -c release
+        swift build -c release -Xswiftc -Ounchecked
     
     - name: Run tests
       run: |
